Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18503

[CHARMAP] Regression: Wingdings and Symbol not displayed

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-8627-gc1e642f-x86-gcc-lin-dbg

      • Launch Charmap
      • Windings and Symbol not displayed when selected
      • Greyed and log says : 

      (win32ss/gdi/ntgdi/freetype.c:7068) WARNING: WChar 0x00a0 has a bitSize.cx of zero 

      This warning was introduced by DougLyons in https://github.com/reactos/reactos/commit/a1bff5b94efa36b9e48d37f91b56428131c10531 for https://github.com/reactos/reactos/pull/7274 

      Attachments

        1. charmap_hbelusca_fix.patch
          36 kB
        2. charmap-01.png
          charmap-01.png
          178 kB
        3. charmap-02.png
          charmap-02.png
          134 kB
        4. charmap-03.png
          charmap-03.png
          207 kB
        5. charmap-fix-by-hbelusca-08.patch
          4 kB
        6. charmap-symbol-fix-by-hbm-01.patch
          23 kB
        7. debugging_1.png
          debugging_1.png
          21 kB
        8. image-2022-10-12-12-59-33-695.png
          image-2022-10-12-12-59-33-695.png
          9 kB
        9. image-2022-10-12-12-59-55-046.png
          image-2022-10-12-12-59-55-046.png
          9 kB
        10. image-2024-09-09-22-01-43-827.png
          image-2024-09-09-22-01-43-827.png
          11 kB
        11. ReactOS.log
          1 kB
        12. Win2003_testing_charmaps_with_ReactOS_wingdings_fonts.png
          Win2003_testing_charmaps_with_ReactOS_wingdings_fonts.png
          89 kB

        Issue Links

          Activity

            People

              hbelusca hbelusca
              KRosUser KRosUser
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: