** WIP ** [WIN32SS:NTGDI] Fix font face's charmap member not systematically initialized

CORE-18503, CORE-19837

See also PR #7657

Co-authored-by: Katayama Hirofumi MZ <katayama.hirofumi.mz@gmail.com>